--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@primevue/forms": "^4.4.1",
     "@tailwindcss/vite": "^4.1.16",
     "nuxt": "^4.2.0",
+    "nuxt-swiper": "^2.0.1",
     "primeicons": "^7.0.0",
     "primevue": "^4.4.1",
     "tailwindcss": "^4.1.16",
