--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@primeuix/themes": "^1.2.5",
     "@primevue/forms": "^4.4.1",
     "@tailwindcss/vite": "^4.1.16",
+    "@types/leaflet": "^1.9.21",
+    "leaflet": "^1.9.4",
     "nuxt": "^4.2.0",
     "nuxt-swiper": "^2.0.1",
     "primeicons": "^7.0.0",
